<resources>
    <string name="app_name">ATTENDANCE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="class_name">Class Name</string>
    <string name="teacher_name">Teacher name</string>
    <string name="student">student</string>
    <string name="attendance">Attendance</string>
    <string name="teachers_name">teachers name</string>
    <string name="division">division</string>
    <string name="starting_date">Starting Date</string>
    <string name="end_date">End Date</string>
    <string name="create">Create</string>
    <string name="organization">Organization</string>

    <array name="categories">
        <item>SELECT YOUR CATEGORY</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
        <item>NT</item>
        <item>VJ</item>
        <item>SBC</item>
        <item>MINO</item>
        <item>OTHER</item>

    </array>
</resources>
